--- a/scheduled_query/dataset.sample_mart/settings.json
+++ b/scheduled_query/dataset.sample_mart/settings.json
@@ -4,7 +4,7 @@
     "schedule": "every day 00:00",
     "query_path": "query.sql",
     "table_schema_path": "schema.json",
-    "table_description": "サンプルマート",
+    "table_description": "2024-12-03 ブログ用",
     "time_partitioning": {
         "field": "created_at",
         "type": "DAY"
