add import_resources variables

--- a/terraform/environments/devintegrate/terraform.tfvars.example
+++ b/terraform/environments/devintegrate/terraform.tfvars.example
@@ -4,3 +4,10 @@ project           = "project-dev"
 
 service_account_email = "sample-datamart@project-dev.iam.gserviceaccount.com"
 
+
+import_resources = {
+    "table": [],
+    "view": [],
+    "scheduled_query": [],
+    "tvf": []
+}
