--- a/terraform/environments/production/terraform.tfvars.example
+++ b/terraform/environments/production/terraform.tfvars.example
@@ -2,7 +2,7 @@
 environment       = "prd"
 project           = "project-prd"
 
-service_account_email = "sample-datamart@project-prd.iam.gserviceaccount.com"
+service_account_email = "datamart-creator@project-prd.iam.gserviceaccount.com"
 
 
 import_resources = {
